<menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
 	<item android:id="@+id/Time"
     	  android:title="Time">
      <menu >
		 <group android:checkableBehavior="single">
		    <item
		        android:id="@+id/action_40"
		        android:title="@string/fourty"
		        android:checked="true"/>
		    <item
		        android:id="@+id/action_80"
		        android:title="@string/eighty"/>
		    
		  </group>
     </menu>
    </item>
    
 	
 	<item android:id="@+id/Gain"
     	  android:title="Gain">
      <menu >
		 <group android:checkableBehavior="single">
		    <item
		        android:id="@+id/action_333"
		        android:title="@string/gain1"
		        android:checked="true"/>
		    <item
		        android:id="@+id/action_1000"
		        android:title="@string/gain2"/>
		    <item
		        android:id="@+id/action_3333"
		        android:title="@string/gain3"/>
		    <item
		        android:id="@+id/action_10000"
		        android:title="@string/gain4"/>
		    
		  </group>
     </menu>
    </item>
    <item android:id="@+id/browse"
     	  android:title="@string/browse"
     	  android:checkableBehavior="single">
      
    </item>
   
    
       
     <item android:id="@+id/about"
     	  android:title="@string/about"
     	  android:checkableBehavior="single">
      
    </item>
    
      <item android:id="@+id/action_stimulationTime"
            android:title="@string/stimulation"
            android:showAsAction="ifRoom" >
       <menu >
		 <group android:checkableBehavior="single">
		    <item
		        android:id="@+id/action_p_1"
		        android:title="@string/p_1"
		        android:checked="true"/>
		    <item
		        android:id="@+id/action_p_2"
		        android:title="@string/p_2"/>
		   <item
		        android:id="@+id/action_p_3"
		        android:title="@string/p_3"/>
		   <item
		        android:id="@+id/action_p_4"
		        android:title="@string/p_4"/>
		   <item
		        android:id="@+id/action_p_5"
		        android:title="@string/p_5"/>
		   <item
		        android:id="@+id/action_p_6"
		        android:title="@string/p_6"/>
		   <item
		        android:id="@+id/action_p_7"
		        android:title="@string/p_7"/>
		   <item
		        android:id="@+id/action_p_8"
		        android:title="@string/p_8"/>
		   <item
		        android:id="@+id/action_p_9"
		        android:title="@string/p_9"/>
		   <item
		        android:id="@+id/action_p_10"
		        android:title="@string/p_10"/>
		    
		  </group>
     </menu>      
     </item>
    
 

</menu>
